# aou-longread-sv-pipeline

./: .gitignore  QUICKSTART.md  README.md  SOURCES.md  pyproject.toml
.github/workflows/: publish-images.yml
containers/: .gitkeep  manifest.yaml
containers/harmoniser/: .dockerignore  Dockerfile
containers/hifiasm/: .dockerignore  .gitkeep  Dockerfile
containers/metadata-writer/: .dockerignore  BUILD_CONTEXT_REPO_ROOT  Dockerfile
containers/pav/: .dockerignore  .gitkeep  Dockerfile
containers/pav2svs/: .dockerignore  Dockerfile
containers/pbmm2/: .dockerignore  .gitkeep  Dockerfile
containers/pbsv/: .dockerignore  .gitkeep  Dockerfile
containers/sniffles2/: .dockerignore  .gitkeep  Dockerfile
iam/: .gitkeep  ecr_repo_policy.json  ecr_repo_policy.json.tmpl  execution_role_policy.json.tmpl  execution_role_trust.json  render.py
infra/: builder_policy.json  builder_policy.json.tmpl  ec2_userdata.sh
pricing/: healthomics-ap-southeast-1.json
scripts/: .gitkeep  bootstrap.sh  budget-alarm.yaml  deploy.py  lint-dockerfiles.py  mirror-images.py  stage-test-data.py  stage_e2e_data_runbook.sh  stamp-wdl-digests.py  submit-run.py
scripts/stage_test_data/: __init__.py  upload.py
scripts/submit_run/: __init__.py  instance_selector.py  residency.py  resources.py  shard_planner.py
test/: conftest.py
test/e2e/: .gitkeep  README.md  __init__.py  cost_baseline.json  cost_regression.py  inputs.json  run_e2e.py  (+4 more)
wdl/: .gitkeep  main.wdl  parameter_template.json  parameter_template_optimised.json  parameter_template_pav_only.json  pav_only.wdl  structs.wdl
(+52 files in other folders)
